--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title> Test home page </title>
+    <title> Δοκιμή ιστοσελίδας </title>
   </head>
   <body>
   </body>
